{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 30,
  "lineage": "60e9b39e-c36b-ed8f-e428-10730d164259",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudyjones_ec201_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:583001104385:instance/i-08111f9c8e002c5a0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cloudyjones-ec2-profile01",
            "id": "i-08111f9c8e002c5a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05bab052c42ccb006",
            "private_dns": "ip-10-0-11-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-068cca4c0e16244de",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e3e203e9a274682",
            "tags": {
              "Name": "cloudyjones-ec2-private01",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-ec2-private01",
              "Project": "cloudyjones"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010db1902d24afcfc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.cloudyjones_ec2_profile01",
            "aws_iam_role.cloudyjones_ec2_role01",
            "aws_security_group.cloudyjones_ec2_sg01",
            "aws_subnet.cloudyjones_private_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudyjones_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:internet-gateway/igw-0020f5b9a1c9385eb",
            "id": "igw-0020f5b9a1c9385eb",
            "owner_id": "583001104385",
            "tags": {
              "Name": "cloudyjones-igw01",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-igw01",
              "Project": "cloudyjones"
            },
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudyjones_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudyjones_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:route-table/rtb-08d95dc923144c321",
            "id": "rtb-08d95dc923144c321",
            "owner_id": "583001104385",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudyjones-private-rt01",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-private-rt01",
              "Project": "cloudyjones"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudyjones_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudyjones_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:route-table/rtb-04bc250371cf86d24",
            "id": "rtb-04bc250371cf86d24",
            "owner_id": "583001104385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0020f5b9a1c9385eb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudyjones-public-rt01",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-public-rt01",
              "Project": "cloudyjones"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cloudyjones_igw01",
            "aws_vpc.cloudyjones_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudyjones_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6cce1d11383c135",
            "route_table_id": "rtb-08d95dc923144c321",
            "subnet_id": "subnet-05e3e203e9a274682"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.cloudyjones_private_rt01",
            "aws_subnet.cloudyjones_private_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ab61285f160e67d",
            "route_table_id": "rtb-08d95dc923144c321",
            "subnet_id": "subnet-097d5de62601525f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.cloudyjones_private_rt01",
            "aws_subnet.cloudyjones_private_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudyjones_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021756c33d7f2ee8a",
            "route_table_id": "rtb-04bc250371cf86d24",
            "subnet_id": "subnet-063a763a103117eaa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cloudyjones_igw01",
            "aws_route_table.cloudyjones_public_rt01",
            "aws_subnet.cloudyjones_public_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036584cc772ac4cad",
            "route_table_id": "rtb-04bc250371cf86d24",
            "subnet_id": "subnet-043c3e6ceb10eead8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cloudyjones_igw01",
            "aws_route_table.cloudyjones_public_rt01",
            "aws_subnet.cloudyjones_public_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudyjones_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:security-group/sg-010db1902d24afcfc",
            "description": "Security group for private EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010db1902d24afcfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudyjones-ec2-sg01",
            "name_prefix": "",
            "owner_id": "583001104385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudyjones-ec2-sg01",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-ec2-sg01",
              "Project": "cloudyjones"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudyjones_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudyjones_endpoint_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:security-group/sg-02b91925d25aec576",
            "description": "Security group for VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b91925d25aec576",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.12.0/24"
                ],
                "description": "HTTPS from private subnets",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cloudyjones-endpoint-sg01",
            "name_prefix": "",
            "owner_id": "583001104385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudyjones-endpoint-sg01",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-endpoint-sg01",
              "Project": "cloudyjones"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudyjones_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudyjones_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:subnet/subnet-05e3e203e9a274682",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e3e203e9a274682",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583001104385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudyjones-private-subnet-1",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-private-subnet-1",
              "Project": "cloudyjones"
            },
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:subnet/subnet-097d5de62601525f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097d5de62601525f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583001104385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudyjones-private-subnet-2",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-private-subnet-2",
              "Project": "cloudyjones"
            },
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudyjones_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:subnet/subnet-063a763a103117eaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063a763a103117eaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "583001104385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudyjones-public-subnet-1",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-public-subnet-1",
              "Project": "cloudyjones"
            },
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:subnet/subnet-043c3e6ceb10eead8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043c3e6ceb10eead8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "583001104385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudyjones-public-subnet-2",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-public-subnet-2",
              "Project": "cloudyjones"
            },
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudyjones_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:vpc/vpc-0a3ea092fb51867e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffdc8397ce0a50d1",
            "default_route_table_id": "rtb-0fd2b3d0cce983c9a",
            "default_security_group_id": "sg-086e128af10e07af4",
            "dhcp_options_id": "dopt-0f6db470ea57ce7b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3ea092fb51867e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd2b3d0cce983c9a",
            "owner_id": "583001104385",
            "tags": {
              "Name": "cloudyjones-vpc01",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-vpc01",
              "Project": "cloudyjones"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudyjones_ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:vpc-endpoint/vpce-07fd36b982bf01e27",
            "dns_entry": [
              {
                "dns_name": "vpce-07fd36b982bf01e27-bppzxwln.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07fd36b982bf01e27-bppzxwln-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07fd36b982bf01e27-bppzxwln-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0669732YDY9NUYUCZ59"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07fd36b982bf01e27",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c625365932315a06",
              "eni-0f13042469b616e9b"
            ],
            "owner_id": "583001104385",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91925d25aec576"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.135",
                "subnet_id": "subnet-05e3e203e9a274682"
              },
              {
                "ipv4": "10.0.12.225",
                "subnet_id": "subnet-097d5de62601525f9"
              }
            ],
            "subnet_ids": [
              "subnet-05e3e203e9a274682",
              "subnet-097d5de62601525f9"
            ],
            "tags": {
              "Name": "cloudyjones-ec2messages-endpoint",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-ec2messages-endpoint",
              "Project": "cloudyjones"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloudyjones_endpoint_sg01",
            "aws_subnet.cloudyjones_private_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudyjones_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:vpc-endpoint/vpce-044c88a22ada8fe01",
            "dns_entry": [
              {
                "dns_name": "vpce-044c88a22ada8fe01-qvy7nqme.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-044c88a22ada8fe01-qvy7nqme-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-044c88a22ada8fe01-qvy7nqme-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0433768A4FZQKGHJ9TW"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z092865939MUAI7JTF6Z7"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04337752SN6HFIDT06D7"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z09062214VDAW8BNI0YS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-044c88a22ada8fe01",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0337dfb921d58f930",
              "eni-061c9970fff80cdb6"
            ],
            "owner_id": "583001104385",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91925d25aec576"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.58",
                "subnet_id": "subnet-05e3e203e9a274682"
              },
              {
                "ipv4": "10.0.12.138",
                "subnet_id": "subnet-097d5de62601525f9"
              }
            ],
            "subnet_ids": [
              "subnet-05e3e203e9a274682",
              "subnet-097d5de62601525f9"
            ],
            "tags": {
              "Name": "cloudyjones-logs-endpoint",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-logs-endpoint",
              "Project": "cloudyjones"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloudyjones_endpoint_sg01",
            "aws_subnet.cloudyjones_private_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudyjones_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:vpc-endpoint/vpce-049a71586b0fdc7f1",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-049a71586b0fdc7f1",
            "ip_address_type": "ipv4",
            "owner_id": "583001104385",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08d95dc923144c321"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cloudyjones-s3-endpoint",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-s3-endpoint",
              "Project": "cloudyjones"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.cloudyjones_private_rt01",
            "aws_vpc.cloudyjones_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudyjones_secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:vpc-endpoint/vpce-0b0cbbc0b97ef8637",
            "dns_entry": [
              {
                "dns_name": "vpce-0b0cbbc0b97ef8637-5fiplom1.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b0cbbc0b97ef8637-5fiplom1-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b0cbbc0b97ef8637-5fiplom1-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04326372PJ6OC61924HM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b0cbbc0b97ef8637",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06d6ff1f34b96a054",
              "eni-0968597e142a3596e"
            ],
            "owner_id": "583001104385",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91925d25aec576"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.224",
                "subnet_id": "subnet-05e3e203e9a274682"
              },
              {
                "ipv4": "10.0.12.18",
                "subnet_id": "subnet-097d5de62601525f9"
              }
            ],
            "subnet_ids": [
              "subnet-05e3e203e9a274682",
              "subnet-097d5de62601525f9"
            ],
            "tags": {
              "Name": "cloudyjones-secretsmanager-endpoint",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-secretsmanager-endpoint",
              "Project": "cloudyjones"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloudyjones_endpoint_sg01",
            "aws_subnet.cloudyjones_private_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudyjones_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:vpc-endpoint/vpce-075df61e1a80451ef",
            "dns_entry": [
              {
                "dns_name": "vpce-075df61e1a80451ef-uw1xuejr.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-075df61e1a80451ef-uw1xuejr-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-075df61e1a80451ef-uw1xuejr-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04335531HZHH8C67VPDJ"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z0433556GB63QQ4RHP1G"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-075df61e1a80451ef",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-092dbe428517c51b1",
              "eni-0f3819cbc25c53c03"
            ],
            "owner_id": "583001104385",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91925d25aec576"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.183",
                "subnet_id": "subnet-05e3e203e9a274682"
              },
              {
                "ipv4": "10.0.12.228",
                "subnet_id": "subnet-097d5de62601525f9"
              }
            ],
            "subnet_ids": [
              "subnet-05e3e203e9a274682",
              "subnet-097d5de62601525f9"
            ],
            "tags": {
              "Name": "cloudyjones-ssm-endpoint",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-ssm-endpoint",
              "Project": "cloudyjones"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloudyjones_endpoint_sg01",
            "aws_subnet.cloudyjones_private_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudyjones_ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:583001104385:vpc-endpoint/vpce-08b0355918c5beca6",
            "dns_entry": [
              {
                "dns_name": "vpce-08b0355918c5beca6-niceard1.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08b0355918c5beca6-niceard1-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08b0355918c5beca6-niceard1-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03827963GR1ZR5UNV6XA"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z0670292112EYM32H61CC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08b0355918c5beca6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-010cf69fcf31852f2",
              "eni-096c8c37f4924af61"
            ],
            "owner_id": "583001104385",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b91925d25aec576"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.106",
                "subnet_id": "subnet-05e3e203e9a274682"
              },
              {
                "ipv4": "10.0.12.198",
                "subnet_id": "subnet-097d5de62601525f9"
              }
            ],
            "subnet_ids": [
              "subnet-05e3e203e9a274682",
              "subnet-097d5de62601525f9"
            ],
            "tags": {
              "Name": "cloudyjones-ssmmessages-endpoint",
              "Project": "cloudyjones"
            },
            "tags_all": {
              "Name": "cloudyjones-ssmmessages-endpoint",
              "Project": "cloudyjones"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a3ea092fb51867e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cloudyjones_endpoint_sg01",
            "aws_subnet.cloudyjones_private_subnets",
            "aws_vpc.cloudyjones_vpc01",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}